@@ -11,6 +11,9 @@ Changes in 2.18.3 -- ?
   - The new LilyPond feature to embed source code files in the PDF (LilyPond >=
     2.19.39) can be used in publish mode and the custom engrave dialog (#813)
   - Clicking a TOC item in the Music View jumps to its destination (#803)
+  - When copying music to an image, a new option has been added to render the
+    image twice as large and scale it smoothly down, which improves images at
+    smaller DPI values.
 * Improvements:
   - Clicking a point and click link in the Music View now remembers the previous
     position
